// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WizardCloak matches snapshot when provided minimal props 1`] = `
<div
  className="wizard-cloak"
>
  <div
    className="progress-header"
  >
    <h2
      className="step-title"
    >
      wizard step 1
    </h2>
    <WizardProgressBar
      currentStepIndex={0}
      handleJump={[Function]}
      steps={
        Array [
          Object {
            "stepStatus": "circle-thick",
            "title": "wizard step 1",
          },
          Object {
            "stepStatus": "circle-thick",
            "title": "wizard step 2",
          },
        ]
      }
    />
  </div>
  <WizardStep
    decrement={null}
    increment={[Function]}
    isComplete={[Function]}
    lastStep={false}
    onNext={[MockFunction]}
    onPrevious={[MockFunction]}
    title="wizard step 1"
  >
    step child 1
  </WizardStep>
  <p
    className="skip-link"
  >
    <a>
       
      skip
    </a>
  </p>
</div>
`;

exports[`WizardCloak with first step complete matches snapshot when provided minimal props 1`] = `
<div
  className="wizard-cloak"
>
  <div
    className="progress-header"
  >
    <h2
      className="step-title"
    >
      wizard step 2
    </h2>
    <WizardProgressBar
      currentStepIndex={1}
      handleJump={[Function]}
      steps={
        Array [
          Object {
            "stepStatus": "checkmark",
            "title": "complete wizard step 1",
          },
          Object {
            "stepStatus": "circle-thick",
            "title": "wizard step 2",
          },
        ]
      }
    />
  </div>
  <WizardStep
    decrement={[Function]}
    isComplete={[Function]}
    lastStep={true}
    onNext={[MockFunction]}
    onPrevious={[MockFunction]}
    title="wizard step 2"
  >
    step child 2
  </WizardStep>
  <p
    className="skip-link"
  >
    <a>
       
      skip
    </a>
  </p>
</div>
`;
